--- a/stiles/stile.css
+++ b/stiles/stile.css
@@ -4,3 +4,15 @@
     text-align: center;
     font-family:Georgia, 'Times New Roman', Times, serif;
  }
+ #container
+ {
+   width: 70%;
+   padding: 1em;
+   text-align: left;
+   border: 1px solid #155;
+   margin: 0 auto;
+ }
+ #container h1
+{
+   font-size: 20px;
+}
