--- a/stiles/stile.css
+++ b/stiles/stile.css
@@ -2,7 +2,7 @@
  {
     color: blueviolet;
     text-align: center;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family:'Courier New', Courier, monospace;
  }
  #container
  {
