--- a/stiles/stile.css
+++ b/stiles/stile.css
@@ -2,7 +2,7 @@ body
 {
     color: blueviolet;
     text-align: center;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 #cabecera
 {
